fix: (theme) The overflow `.page-title` in mobile

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -254,6 +254,10 @@ body {
     border-bottom: 0;
 }
 
+.post-single>.page-title {
+    font-size: 3em;
+}
+
 .post-title {
     margin: 0;
 }
